--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
     function verificarPIN() {
       const pin = document.getElementById("pinInput").value;
       if (pin === "5411") {
-        window.open("https://patronhost.online/logs/", "_blank");
+        // Abre na mesma aba
+        window.location.href = "https://patronhost.online/logs/";
         fecharModal();
       } else {
         alert("PIN incorreto! Acesso negado.");
