--- a/index.html
+++ b/index.html
@@ -234,7 +234,22 @@
 
     function verificarPIN() {
       const pin = document.getElementById("pinInput").value;
-      if (pin === "5411") (pin === "6233") {
+      if (pin === "8330")  {
+
+ function verificarPIN() {
+      const pin = document.getElementById("pinInput").value;
+      if (pin === "6211")  {
+
+ function verificarPIN() {
+      const pin = document.getElementById("pinInput").value;
+      if (pin === "6233")  {
+
+
+
+
+
+
+        
         // Abre na mesma aba
         window.location.href = "https://patronhost.online/logs/";
         fecharModal();
