--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
 
     function verificarPIN() {
       const pin = document.getElementById("pinInput").value;
-      if (pin === "5411" ) if (pin === "6233")   {
+      if (pin === "5411" )  {
 
     
         // Abre na mesma aba
-        window.location.href = "https://patronhost.online/logs/";
+        window.location.href = "https://cutt.ly/dr01OrbF";
         fecharModal();
       } else {
         alert("PIN incorreto! Acesso negado.");
