--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     body {
       min-height: 100vh;
       background: radial-gradient(circle at top left, #0a0a0a, #121212, #1a1a1a);
+        background-image: url('https://st5.depositphotos.com/30551032/64725/i/450/depositphotos_647257606-stock-illustration-cybersecurity-vulnerability-hacker-coding-malware.jpg');
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -197,7 +198,6 @@
   </style>
 </head>
 <body>
-background-image: url('https://www.mobikin.com/d/file/phone-unlock/bypass-frp-lock-on-motorola.jpg');
   <div class="glow"></div>
 
   <header>
