--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       min-height: 100vh;
       background: radial-gradient(circle at top left, #0a0a0a, #121212, #1a1a1a);
-        background-image: url('https://st5.depositphotos.com/30551032/64725/i/450/depositphotos_647257606-stock-illustration-cybersecurity-vulnerability-hacker-coding-malware.jpg');
+        background-image: url('https://tse3.mm.bing.net/th/id/OIP.u-e5HDzZpGEXKrfVBXjUdQHaEc?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3');
       color: #fff;
       display: flex;
       flex-direction: column;
