--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
       box-sizing: border-box;
       font-family: "Poppins", sans-serif;
     }
+body {
+  min-height: 100vh;
+  background: 
+    radial-gradient(circle at top left, #0a0a0a, #121212, #1a1a1a),
+    linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+    url('https://st5.depositphotos.com/30551032/64725/i/450/depositphotos_647257606-stock-illustration-cybersecurity-vulnerability-hacker-coding-malware.jpg') no-repeat center center;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
-    body {
-       background-image: url('https://img.freepik.com/fotos-premium/um-hacker-esta-sentado-em-frente-a-um-estilo-de-matriz-de-fundo-de-laptop-gerado-por-ia_313044-514.jpg');
-      min-height: 100vh;
-      background: radial-gradient(circle at top left, #0a0a0a, #121212, #1a1a1a);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
 
     header {
       position: absolute;
