--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       font-family: "Poppins", sans-serif;
     }
     body {
+      background-image: url('https://www.mobikin.com/d/file/phone-unlock/bypass-frp-lock-on-motorola.jpg');
       min-height: 100vh;
       background: radial-gradient(circle at top left, #0a0a0a, #121212, #1a1a1a);
       color: #fff;
