--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     body {
       
       min-height: 100vh;
-    background-image: url('https://tse1.mm.bing.net/th/id/OIP.-Cq-Zd1ESfFL4FbHs54idgHaEK?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3');
+    background-image: url('https://tse1.mm.bing.net/th/id/OIP.3GcpRULm89lJy8mQJKQZogHaE7?cb=12&w=626&h=417&rs=1&pid=ImgDetMain&o=7&rm=3');
       color: #fff;
       display: flex;
       flex-direction: column;
